Добавлена пороговая обработка + метод Оцу